src/test/fail/bad_list_close_token.ly
#[
SyntaxError: Expected closing token ']', not ')'.
Where: File "test/fail/bad_list_close_token.ly" at line 6
]#

var lsi: list[integer] = [10, 20, 30)
